# studious-spoon

./: pyproject.toml
src/studious_spoon/: feature_extraction.py  utils.py
src/studious_spoon/capsnet/: capsnet_d2r.py  capsnet_em.py  capsnet_v1.py
src/studious_spoon/dcnn/: auto_trainer_tester.py  early_feature_fusion.py  feature_extraction.py  hpo.py  schemas.py  trainer_tester.py  utils.py
src/studious_spoon/runnables/: auto_dcnn_trainer.py  dcnn_feature_extractor.py  dcnn_trainer.py  features_fuser.py
