[project]
name = "studious-spoon"
version = "0.1.0"
description = "Code COSC481 at IUP (Fall 2024)"
authors = [{name = "ng-23", email = "23grattan@gmail.com"}]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
studious-spoon = { path = ".", editable = true }
torcheval = ">=0.0.7"

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.1.3,<2.2"
pandas = ">=2.2.3,<2.3"
torchvision = ">=0.20.1,<0.21"
marshmallow = ">=3.23.1,<3.24"
h5py = ">=3.12.1,<3.13"
pytorch = ">=2.5.1,<2.6"
scikit-learn = ">=1.5.2,<1.6"
matplotlib = ">=3.9.2,<3.10"
tqdm = ">=4.67.0,<4.68"
termcolor = ">=2.5.0,<2.6"
